testdata/test/resources/com/yafred/asn1/test/should_fail/untagged_choice_in_set.asn
-- FAILS: ambiguity between int1 and int2

Example DEFINITIONS  ::= 
BEGIN 

Untagged-Choice ::= CHOICE {
    int1 INTEGER,
    string IA5String
}


Set ::= SET {
   int2 INTEGER,
   choice Untagged-Choice
}

END		
	